--- a/index.css
+++ b/index.css
@@ -346,7 +346,7 @@ header{
 }
 
 .mySwiper {
-    width: 100%;
+    width: 80%;
     height:120vh;
     padding: 20px 10px;
     margin-left: auto;
@@ -470,4 +470,107 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+}
+/*end of style for body section*/
+
+.footer {
+    width: 100%;
+    height: 70vh;
+    margin-top: 50px;
+}
+.footer-logo {
+    width: 100%; 
+    height: 40vh;
+
+}
+.footer-logo-content {
+    width: 70%;
+    margin: auto;
+    height: 35vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer-logo-content > * {
+    margin-top: 20px;
+}
+.footer-logo-content img {
+    height: 100px;
+}
+.footer-logo-content p {
+    text-align: center;
+    font-family: Poppins;
+    font-size: 16px;
+}
+.footer-icons {
+    width:40%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.footer-icons i {
+    font-size: 27px;
+    color: var(--border-color);
+    cursor: pointer;
+}
+.footer-icons i:hover{
+    color: var(--main-color);
+}
+.service-container {
+    width: 80%;
+    height: 20vh;
+    margin: auto;
+    border-top : 1px dotted var(--border-color);
+    border-bottom : 1px dotted var(--border-color);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.service-container .card > * {
+    margin-top: 5px;
+}
+.service-container .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+.service-container .card i {
+    color:  var(--border-color);
+    font-size: 40px;
+} 
+.service-container .card p {
+    color: var(--border-color);
+    font-family: Poppins;
+    font-size: 12px;
+}
+.service-container .card h3 {
+    font-size: 15px;
+    font-family: Poppins;
+}
+.service-container .card:hover h3, 
+.service-container .card:hover p {
+    color: var(--main-color);
+}
+.payment-methods {
+    margin: auto;
+    width: 40%;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.payment-methods img {
+    height: 100px;
+}
+.payment-methods p {
+    font-size: 12px;
+    font-family: Poppins;
+}
+.payment-methods p span {
+    color: var(--main-color);
+    font-weight: bold;
 }
