--- a/index.css
+++ b/index.css
@@ -361,7 +361,7 @@ header{
       text-align: center;
       font-size: 18px;
       height: calc((100% - 30px) / 2) !important;
-      background-color: var(--border-color);
+      background-color: #f7f7f7;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -574,3 +574,4 @@ header{
     color: var(--main-color);
     font-weight: bold;
 }
+/*end of styling for footer section*/
