--- a/shop.css
+++ b/shop.css
@@ -49,7 +49,7 @@ header{
 .cart-icon-container{
     align-items: center;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 40px;
     width: 25%;
 }
@@ -99,11 +99,15 @@ header{
 .cart-icon i{
     font-size: 1.2rem;
     background-color: var(--main-color);
-    border-radius: 50%;
     padding: 8px;
     color: white;
     cursor: pointer;
     margin-right: 5px;
+}
+.cart-icon i span {
+    font-family: Poppins;
+    font-weight: normal;
+    margin-left: 10px;
 }
 .categories-sub-menu {
     width: 100%;
@@ -265,6 +269,11 @@ header{
   .product-info {
     height: 75vh;
   }
+  .product-image i {
+    font-size: 20px;
+    font-weight: bold ;
+    
+  }
 
 .product-info {
     padding: 20px 20px;
@@ -306,6 +315,7 @@ header{
     font-family: Poppins;
     cursor: pointer;
 } 
+
 .product-info .p-details {
     font-family: Poppins;
     font-weight: bold;
