--- a/shop.css
+++ b/shop.css
@@ -23,6 +23,24 @@
     max-width: 100%;
     height: 50px;
     background-color: var(--border-color);
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+}
+.welcome-div > * {
+    margin-left: 20px;
+}
+.welcome-div p {
+    font-family: Poppins;
+    border-right: 1px solid black;
+    padding: 0 10px;
+}
+.welcome-div a {
+    text-decoration: none;
+    font-family: Poppins;
+    color: black;
+    padding: 0 10px;
+    margin-left: 10px;
 }
 header{
     position: relative;
@@ -263,17 +281,17 @@ header{
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
   }
   .product-image, 
   .product-info {
     height: 75vh;
-  }
+}
   .product-image i {
     font-size: 20px;
     font-weight: bold ;
     
-  }
+}
 
 .product-info {
     padding: 20px 20px;
@@ -329,15 +347,91 @@ header{
     object-fit: contain;
     object-position: center;
 }
+#close {
+    font-size: 30px;
+}
 
+body {
+    overflow-x: hidden;
+}
+/*styling for cart div */
+#shopping-cart {
+    height: 100vh;
+    max-height: 100vh;
+    overflow-y: scroll;
+    position: fixed;
+    top: 0;
+    left: -400px;
+    width: 400px;
+    z-index: 2;
+    background-color: white;
+    transition: left 0.3s ease-in-out;
+}
 
+#shopping-cart.visible {
+    left: 0;
+}
 
+.my-cart {
+    width: 100%;
+    height: 40px;
+    padding: 7px;
+    background-color: var(--main-color);
 
+}
+.my-cart h3 {
+    font-family: Poppins;
+    color: white;
+}
+.cart-item-container {
+    width: 100%;
+}
+.cart-item {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+.cart-item p {
+    font-family: Poppins;
+}
+.cart-item img {
+    width: 30%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+.cart-item i {
+    color: var(--main-color);
+}
 
+.my-total {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    padding: 20px;
+    border-top: 1px solid var(--main-color);
+}
+.my-total h3, 
+.my-total p {
+    font-family: Poppins;
+}
 
-
-
-
+#checkout-btn {
+    border: none;
+    width: 100%;
+    height: 45px;
+    background: var(--main-color);
+    color: white;
+    font-family: Poppins;
+    font-size: 18px;
+    cursor: pointer;
+}
 
 
 
