--- a/help.css
+++ b/help.css
@@ -337,3 +337,284 @@ header{
     font-weight: bold;
 }
 /*end of styling for footer section*/
+
+@media (max-width: 480px) {
+    body {
+        overflow-x: hidden;
+    }
+    .welcome-div{
+        width: 100%;
+        max-width: 100%;
+        height: 50px;
+        background-color: var(--border-color);
+        display: flex;
+        align-items: center;
+        padding: 0 10px;
+    }
+    .welcome-div > * {
+        margin-left: 10px;
+    }
+    .welcome-div p {
+        font-family: Poppins;
+        border-right: 1px solid black;
+        padding: 0 10px;
+        font-size: 13px;
+    }
+    .welcome-div a {
+        text-decoration: none;
+        font-family: Poppins;
+        color: black;
+        padding: 0 10px;
+        margin-left: 10px;
+        font-size: 13px;
+    }
+    .welcome-div a:hover{
+        color: var(--main-color);
+    }
+    .header{
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        max-width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 39px 10px;
+}
+
+.logo-container{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+.cart-icon-container{
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    height: 40px;
+    width: 50%;
+}
+.search-btn {
+    width: 80%;
+}
+.logo img{
+    height: 80px;
+}
+.nav-menu ul {
+    z-index: 1;
+  }
+  
+.nav-menu ul:first-child {
+    display: block;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: -105%;
+    line-height: 5;
+    padding: 20px 20px;
+    max-height: 100vh;
+    overflow-y: scroll;
+    background-color: white;
+    z-index: 2;
+    transition: left 1s ease;
+  }
+  .nav-menu ul:first-child {
+    padding: 20px 20px;
+  }
+  .nav-menu ul a:first-child {
+    font-size: 16px;
+  }
+
+.categories-sub-menu {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: auto;
+    width: 100%;
+    padding: 10px 10px;
+    display: none;
+    justify-content: space-around;
+    background-color: white;
+    box-shadow: none;
+    opacity: 1;
+    transform: translateY(-10px);
+  }
+
+  .computer,
+  .fashion,
+  .electronics,
+  .drop-down-img {
+    width: 80%;
+    padding: 5px 5px;
+
+  }
+
+  .drop-down-img img {
+    height: 80%;
+    max-width: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+  .active {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .categories-sub-menu h4{
+    font-family: Poppins-bold;
+    font-size: 20px; 
+    border-bottom: none;      
+}
+.categories-sub-menu ul li a {
+    font-family: Poppins;
+}
+.nav-menu ul li a span {
+    float: right;
+    display: block;
+    font-size: 25px;
+    margin-top: -45px;
+    margin-right: -40px;
+}
+#bar {
+    display: block;
+    font-size: 20px;
+}
+.faq-container {
+    width: 80%;
+    margin: auto;
+}
+.heading {
+    font-size: 17px;
+    font-family: Poppins;
+    text-align: center;
+}
+.contact-container {
+    width: 80%;
+    margin: auto;
+    padding: 20px;
+    
+  }
+  .contact-container h2 {
+    font-family: Poppins;
+    text-align: center;
+    font-size: 17px;
+    margin-bottom: 7px;
+  }
+  .contact-container p {
+    font-family: Poppins;
+    font-size: 13px;
+  }
+  .contact-container i {
+    color: var(--main-color);
+    padding-right: 10px;
+  }
+
+footer {
+    width: 100%;
+    height: 85vh;
+    margin-top: 50px;
+}
+.footer-logo {
+    width: 100%; 
+    height: 40vh;
+    padding: 5px 0;
+}
+.footer-logo-content {
+    width: 70%;
+    margin: auto;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer-logo-content > * {
+    margin-top: 10px;
+}
+.footer-logo-content img {
+    height: 70px;
+}
+.footer-logo-content p {
+    text-align: center;
+    font-family: Poppins;
+    font-size: 12px;
+}
+.footer-icons {
+    width:50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.footer-icons i {
+    font-size: 17px;
+    color: var(--border-color);
+    cursor: pointer;
+}
+.footer-icons i:hover{
+    color: var(--main-color);
+}
+.service-container {
+    width: 80%;
+    height: 30vh;
+    margin: auto;
+    border-top : 1px dotted var(--border-color);
+    border-bottom : 1px dotted var(--border-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.card {
+    width: 30%;
+    text-align: center;
+}
+.service-container .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+.service-container .card i {
+    color:  var(--border-color);
+    font-size: 25px;
+} 
+.service-container .card p {
+    color: var(--border-color);
+    font-family: Poppins;
+    font-size: 10px;
+}
+.service-container .card h3 {
+    font-size: 10px;
+    font-family: Poppins;
+}
+.service-container .card:hover h3, 
+.service-container .card:hover p {
+    color: var(--main-color);
+}
+.payment-methods {
+    margin: auto;
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.payment-methods img {
+    height: 70px;
+}
+.payment-methods p {
+    font-size: 10px;
+    font-family: Poppins;
+}
+.payment-methods p span {
+    color: var(--main-color);
+    font-weight: bold;
+}
+
+
+
+}
