--- a/index.css
+++ b/index.css
@@ -42,6 +42,9 @@
     padding: 0 10px;
     margin-left: 10px;
 }
+.welcome-div a:hover{
+    color: var(--main-color);
+}
 header{
     position: relative;
     z-index: 2;
@@ -71,6 +74,9 @@ header{
     height: 40px;
     width: 25%;
 }
+#bar {
+    display: none;
+}
 .logo img{
     height: 100px;
 }
@@ -89,6 +95,9 @@ header{
     font-weight: bold;
     transition: 0.5s;
     font-size: 17px;
+}
+.nav-menu ul li a span {
+    display: none;
 }
 .nav-menu ul li a:hover{
     color: var(--main-color) ;
@@ -122,6 +131,9 @@ header{
     color: white;
     cursor: pointer;
     margin-right: 5px;
+}
+#shop-dropdown i {
+    padding-left: 5px;
 }
 .categories-sub-menu {
     width: 100%;
@@ -593,3 +605,513 @@ header{
     font-weight: bold;
 }
 /*end of styling for footer section*/
+
+
+/*Css media queries*/
+
+/*Responsiveness for mobile small screen size*/
+@media (max-width: 480px) {
+    body {
+        overflow-x: hidden;
+    }
+    .welcome-div{
+        width: 100%;
+        max-width: 100%;
+        height: 50px;
+        background-color: var(--border-color);
+        display: flex;
+        align-items: center;
+        padding: 0 10px;
+    }
+    .welcome-div > * {
+        margin-left: 10px;
+    }
+    .welcome-div p {
+        font-family: Poppins;
+        border-right: 1px solid black;
+        padding: 0 10px;
+        font-size: 13px;
+    }
+    .welcome-div a {
+        text-decoration: none;
+        font-family: Poppins;
+        color: black;
+        padding: 0 10px;
+        margin-left: 10px;
+        font-size: 13px;
+    }
+    .welcome-div a:hover{
+        color: var(--main-color);
+    }
+    .header{
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        max-width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 39px 10px;
+}
+
+.logo-container{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+.cart-icon-container{
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    height: 40px;
+    width: 50%;
+}
+.search-btn {
+    width: 80%;
+}
+.logo img{
+    height: 80px;
+}
+.nav-menu ul {
+    z-index: 1;
+  }
+  
+.nav-menu ul:first-child {
+    display: block;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: -105%;
+    line-height: 5;
+    padding: 20px 20px;
+    max-height: 100vh;
+    overflow-y: scroll;
+    background-color: white;
+    z-index: 2;
+    transition: left 1s ease;
+  }
+  .nav-menu ul:first-child {
+    padding: 20px 20px;
+  }
+  .nav-menu ul a:first-child {
+    font-size: 16px;
+  }
+
+.categories-sub-menu {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: auto;
+    width: 100%;
+    padding: 10px 10px;
+    display: none;
+    justify-content: space-around;
+    background-color: white;
+    box-shadow: none;
+    opacity: 1;
+    transform: translateY(-10px);
+  }
+
+  .computer,
+  .fashion,
+  .electronics,
+  .drop-down-img {
+    width: 80%;
+    padding: 5px 5px;
+
+  }
+
+  .drop-down-img img {
+    height: 80%;
+    max-width: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+  .active {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .categories-sub-menu h4{
+    font-family: Poppins-bold;
+    font-size: 20px; 
+    border-bottom: none;      
+}
+.categories-sub-menu ul li a {
+    font-family: Poppins;
+}
+.nav-menu ul li a span {
+    float: right;
+    display: block;
+    font-size: 25px;
+    margin-top: -45px;
+    margin-right: -40px;
+}
+#bar {
+    display: block;
+    font-size: 20px;
+}
+
+.third-slider .slider-content h1 {
+    font-size: 50px;
+    letter-spacing: 5px;
+}
+.third-slider .slider-content h3
+{
+    font-size: 20px;
+}
+.second-slider .slider-content {
+    padding-left: 50px;
+}
+.slider-content h1{
+    color: white;
+    font-size: 50px;
+    font-family: Anton;
+    letter-spacing: 15px;
+    line-height: 1;
+}
+.slider-content h1 span{   
+     color: black;
+     font-family: Anton;
+     font-size: 50px;
+     letter-spacing: 7px;
+}
+.slider-content h3{
+    color: white;
+    margin-top: 30px;
+    font-size: 20px;
+    font-family: Poppins-bold;
+}
+.slider-content button {
+    margin-top: 10px;
+    border: none;
+    background-color: black;
+    color: white;
+    height: 45px;
+    width: 90px;
+    border-radius: 22px;
+    font-size: .6rem;
+    font-weight: bold;
+    font-family: sans-serif;
+    cursor: pointer;
+    transition: transform 1s ease-out, color .5s ease, background-color .5s ease;
+}
+.second-slider .slider-content {
+    margin-top: -50px;
+    margin-right: 40px;
+    padding: 10px;
+  
+}
+.second-slider .slider-content h3{
+    font-family: AbrilFatface;
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 10px;
+
+}
+.second-slider .slider-content h1 {
+    font-family: Poppins;
+    color: white;
+    font-size: 30px;
+    text-align: center;  
+    letter-spacing: 2px;
+    line-height: 1;
+    
+    
+} 
+.featured-products h1{
+    margin-top: 20px;
+    font-family: Poppins;
+    font-size: 25px;
+
+}
+.featured-products .category{
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(2, 100px);
+    grid-gap: 10px;
+    margin-top: 30px;
+}
+.featured-products .category button {
+    border: 1px solid var(--border-color);
+    background-color: white;
+    color: white;
+    height: 40px;
+    min-width: 50px;
+    display: inline-block;
+    border-radius: 22px;
+    padding: 7px;
+    font-size: .7rem;
+    font-weight: bold;
+    font-family: sans-serif;
+    cursor: pointer;
+    transition: transform 1s ease-out, color .5s ease, background-color .5s ease;
+}
+.featured-products .category button:hover{
+    background-color: black;
+}
+.featured-products .category button:hover a{
+    color: white;
+}
+.featured-products .category button:not(:empty) {
+    min-width: min-content;
+    padding:  0 10px;
+}
+
+.featured-products .category button a {
+    text-decoration: none;
+    color: black;
+    font-family: Poppins;
+}
+.featured-products .category .all-btn{
+    color: white;
+    background-color: black;
+}
+.featured-products .category .all-btn a{
+    color: white;
+}
+.mySwiper {
+    margin-top: 30px;
+    width: 70%;
+    height:90vh;
+    padding: 10px 30px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+.mySwipper-wrapper{
+    height: 100vh;
+    width: 100%;
+}
+.product-slide{
+      text-align: center;
+      font-size: 18px;
+      height: 40% !important;
+      background-color: #f7f7f7;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+}
+.product-slide img{
+    height: 80%;
+    width: 100%;
+    object-fit: contain; 
+    object-position: center;
+}
+.product-slide .item-price {
+    width: 100%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 12px;
+    flex-direction: column;
+    background-color: white;
+    
+}
+.product-slide .item-price p {
+    font-family: Poppins;
+}
+
+.product-slide .item-price .price{
+    color: var(--main-color);
+    font-weight: bold;
+}
+.newsletter-container{
+    width: 100%;
+    height: 70vh;
+    margin-top: 20px;
+    background-image:url(./images/general/keyboard-cart.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+.newsletter {
+    width: 85%;
+    height: 60vh;
+    padding: 10px 10px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);    
+}
+.newsletter > * {
+    margin-bottom: 15px;
+}
+.newsletter h1, 
+.newsletter p {
+    font-family: Poppins;
+}
+.newsletter p {
+    text-align: center;
+    font-size: 13px;
+}
+.newsletter h1 {
+    font-size: 20px;
+}
+.newsletter form {
+    height: 15vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.newsletter form > * {
+    margin-top: 5px;
+}
+.newsletter form input {
+    font-size: 12px;
+    padding: 7px 7px;
+    border: 1px solid var(--border-color);
+    width: 80%;
+    height: 40px;
+    font-family: Poppins;
+    border-radius: 20px;
+}
+.newsletter form input:focus {
+    outline: none;
+}
+.newsletter form .btn {
+    width: 50%;
+    background-color: black;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 10px;
+    cursor: pointer;
+    align-items: center;
+}
+.newsletter form .btn:hover{
+    background-color: var(--main-color);
+}
+.subscription {
+    width: 80%;
+    height: 7vh;
+    background-color: green;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    font-size: 12px;
+}
+.footer {
+    width: 100%;
+    height: 85vh;
+    margin-top: 50px;
+}
+.footer-logo {
+    width: 100%; 
+    height: 40vh;
+    padding: 5px 0;
+}
+.footer-logo-content {
+    width: 70%;
+    margin: auto;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer-logo-content > * {
+    margin-top: 10px;
+}
+.footer-logo-content img {
+    height: 70px;
+}
+.footer-logo-content p {
+    text-align: center;
+    font-family: Poppins;
+    font-size: 12px;
+}
+.footer-icons {
+    width:50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.footer-icons i {
+    font-size: 17px;
+    color: var(--border-color);
+    cursor: pointer;
+}
+.footer-icons i:hover{
+    color: var(--main-color);
+}
+.service-container {
+    width: 80%;
+    height: 30vh;
+    margin: auto;
+    border-top : 1px dotted var(--border-color);
+    border-bottom : 1px dotted var(--border-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.card {
+    width: 30%;
+    text-align: center;
+}
+.service-container .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+.service-container .card i {
+    color:  var(--border-color);
+    font-size: 25px;
+} 
+.service-container .card p {
+    color: var(--border-color);
+    font-family: Poppins;
+    font-size: 10px;
+}
+.service-container .card h3 {
+    font-size: 10px;
+    font-family: Poppins;
+}
+.service-container .card:hover h3, 
+.service-container .card:hover p {
+    color: var(--main-color);
+}
+.payment-methods {
+    margin: auto;
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.payment-methods img {
+    height: 70px;
+}
+.payment-methods p {
+    font-size: 10px;
+    font-family: Poppins;
+}
+.payment-methods p span {
+    color: var(--main-color);
+    font-weight: bold;
+}
+
+
+
+}
+    
+  
