--- a/shop.css
+++ b/shop.css
@@ -77,7 +77,11 @@ header{
 
 .nav-menu ul{
     display: flex;
-    margin-left: 5px;
+    margin-left: 10px;
+    
+}
+#close-menu {
+    display: none;
 }
 .nav-menu ul li {
     padding-right: 40px;
@@ -89,6 +93,7 @@ header{
     font-weight: bold;
     transition: 0.5s;
     font-size: 17px;
+    padding-right: 50px;
 }
 .nav-menu ul li a:hover{
     color: var(--main-color) ;
@@ -113,6 +118,9 @@ header{
 }
 .search-btn input:focus{
     outline: none;
+}
+#bar {
+    display: none;
 }
 .cart-icon i{
     font-size: 1.2rem;
@@ -367,6 +375,12 @@ body {
     background-color: white;
     transition: left 0.3s ease-in-out;
 }
+#closeCart {
+ float: right;
+ padding-right: 10px;
+ font-size: 20px;
+      
+}
 
 #shopping-cart.visible {
     left: 0;
@@ -432,11 +446,6 @@ body {
     font-size: 18px;
     cursor: pointer;
 }
-
-
-
-
-
 
 /*footer section*/
 .footer {
@@ -541,3 +550,508 @@ body {
     font-weight: bold;
 }
 /*end of styling for footer section*/
+
+@media (max-width: 480px) {
+    body {
+        overflow-x: hidden;
+    }
+    .welcome-div{
+        width: 100%;
+        max-width: 100%;
+        height: 50px;
+        background-color: var(--border-color);
+        display: flex;
+        align-items: center;
+        padding: 0 10px;
+    }
+    .welcome-div > * {
+        margin-left: 10px;
+    }
+    .welcome-div p {
+        font-family: Poppins;
+        border-right: 1px solid black;
+        padding: 0 10px;
+        font-size: 13px;
+    }
+    .welcome-div a {
+        text-decoration: none;
+        font-family: Poppins;
+        color: black;
+        padding: 0 10px;
+        margin-left: 10px;
+        font-size: 13px;
+    }
+    .welcome-div a:hover{
+        color: var(--main-color);
+    }
+    .header{
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        max-width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 39px 10px;
+}
+
+.logo-container{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+.cart-icon-container{
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    height: 40px;
+    width: 50%;
+}
+.search-btn {
+    width: 80%;
+}
+.logo img{
+    height: 80px;
+}
+.nav-menu ul {
+    z-index: 1;
+  }
+  
+.nav-menu ul:first-child {
+    display: block;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: -105%;
+    line-height: 5;
+    padding: 20px 20px;
+    max-height: 100vh;
+    overflow-y: scroll;
+    background-color: white;
+    z-index: 2;
+    transition: left 1s ease;
+  }
+  .nav-menu ul:first-child {
+    padding: 20px 20px;
+  }
+  .nav-menu ul a:first-child {
+    font-size: 16px;
+  }
+
+.categories-sub-menu {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: auto;
+    width: 100%;
+    padding: 10px 10px;
+    display: none;
+    justify-content: space-around;
+    background-color: white;
+    box-shadow: none;
+    opacity: 1;
+    transform: translateY(-10px);
+  }
+
+  .computer,
+  .fashion,
+  .electronics,
+  .drop-down-img {
+    width: 80%;
+    padding: 5px 5px;
+
+  }
+
+  .drop-down-img img {
+    height: 80%;
+    max-width: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+  .active {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .categories-sub-menu h4{
+    font-family: Poppins-bold;
+    font-size: 20px; 
+    border-bottom: none;      
+}
+.categories-sub-menu ul li a {
+    font-family: Poppins;
+}
+.nav-menu ul li a span {
+    float: right;
+    display: block;
+    font-size: 25px;
+    margin-top: -45px;
+    margin-right: -40px;
+}
+#bar {
+    display: block;
+    font-size: 20px;
+}
+.our-products {
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    margin-top: 40px;
+    flex-direction: column;
+    justify-content: center;
+    font-family: Poppins;
+}
+.our-products h2, 
+.our-products p {
+    font-family: Poppins;
+    padding-left: 20px;
+    padding-right: 10px;
+}
+.our-products h2 {
+    font-size: 17px;
+}
+.our-products p {
+    font-size: 12px;
+}
+.products-container {
+    width: 100%;
+    margin-top: 50px;
+    padding: 20px 0;
+}
+.product-wrapper {
+    width: 80%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 20px;
+    transition: transform 2s ease;
+}
+
+.product {
+    height: 270px;
+    background-color: #f7f7f7;
+}
+.product:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); 
+}
+.product img {
+    display: flex;
+    flex-direction: column;
+    height: 85%;
+    width: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+.price-container{
+    display: flex;
+    height: 15%;
+    padding: 5px;
+    flex-direction: column;
+    background-color: white;
+    justify-content:center;
+    align-items: center;
+}
+.price-container p {
+    font-family: Poppins;
+    
+}
+.price-container .price {
+    font-weight: bold;
+    color: var(--main-color);
+}
+.product-details {
+    visibility: hidden;
+    position: fixed;
+    z-index: 2;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    height: 80vh;
+    max-height: 80vh;
+    overflow-y: scroll;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    transition: visibility 0.2s ease-in-out;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+}
+.overlay {
+display: none;
+position: fixed;
+z-index: 1;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.7);
+}
+.product-image {
+    height: 40vh;
+}
+.product-image i {
+font-size: 17px;
+font-weight: bold ;
+}
+
+.product-info {
+padding: 2px 10px;
+height: auto;
+}
+.product-info > * {
+margin-top: 15px;
+}
+.product-info h2 {
+font-family: Poppins;
+}
+.product-info .price {
+font-size: 17px;
+font-weight: bold;
+font-family: Poppins;
+} 
+.product-info  select {
+font-family: Poppins;
+padding: 5px;
+
+}
+.product-info  select:focus {
+outline: none;
+}
+.product-info input[type=number] {
+width: 17%;
+height: 30px;
+padding: 5px;
+font-size: 15px;
+}
+.product-info input[type=number]:focus {
+outline: none;
+}
+.product-info button {
+border: none;
+width: 50%;
+height: 45px;
+background-color: var(--main-color);
+color: white;
+font-family: Poppins;
+cursor: pointer;
+} 
+
+.product-info .p-details {
+font-family: Poppins;
+font-weight: bold;
+}
+.product-info .details {
+font-family: Poppins; 
+}
+.product-image img {
+height: 70%;
+width: 100%;
+object-fit: contain;
+object-position: center;
+}
+#close {
+font-size: 27px;
+}
+
+#shopping-cart {
+    height: 100vh;
+    max-height: 100vh;
+    overflow-y: scroll;
+    position: fixed;
+    top: 0;
+    left: -400px;
+    width: 100%;
+    z-index: 2;
+    background-color: white;
+    transition: left 0.3s ease-in-out;
+}
+#closeCart {
+  visibility: visible;
+  float: right;
+  padding-right: 10px;
+  font-size: 20px;
+}
+#shopping-cart.visible {
+    left: 0;
+}
+
+.my-cart {
+    width: 100%;
+    height: 40px;
+    padding: 7px;
+    background-color: var(--main-color);
+
+}
+.my-cart h3 {
+    font-family: Poppins;
+    color: white;
+}
+.cart-item-container {
+    width: 100%;
+}
+.cart-item {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+.cart-item p {
+    font-family: Poppins;
+}
+.cart-item img {
+    width: 30%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+.cart-item i {
+    color: var(--main-color);
+}
+
+.my-total {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    padding: 20px;
+    border-top: 1px solid var(--main-color);
+}
+.my-total h3, 
+.my-total p {
+    font-family: Poppins;
+}
+
+#checkout-btn {
+    border: none;
+    width: 100%;
+    height: 45px;
+    background: var(--main-color);
+    color: white;
+    font-family: Poppins;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+.footer {
+    width: 100%;
+    height: 85vh;
+    margin-top: 50px;
+}
+.footer-logo {
+    width: 100%; 
+    height: 40vh;
+    padding: 5px 0;
+}
+.footer-logo-content {
+    width: 70%;
+    margin: auto;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer-logo-content > * {
+    margin-top: 10px;
+}
+.footer-logo-content img {
+    height: 70px;
+}
+.footer-logo-content p {
+    text-align: center;
+    font-family: Poppins;
+    font-size: 12px;
+}
+.footer-icons {
+    width:50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.footer-icons i {
+    font-size: 17px;
+    color: var(--border-color);
+    cursor: pointer;
+}
+.footer-icons i:hover{
+    color: var(--main-color);
+}
+.service-container {
+    width: 80%;
+    height: 30vh;
+    margin: auto;
+    border-top : 1px dotted var(--border-color);
+    border-bottom : 1px dotted var(--border-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.card {
+    width: 30%;
+    text-align: center;
+}
+.service-container .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+.service-container .card i {
+    color:  var(--border-color);
+    font-size: 25px;
+} 
+.service-container .card p {
+    color: var(--border-color);
+    font-family: Poppins;
+    font-size: 10px;
+}
+.service-container .card h3 {
+    font-size: 10px;
+    font-family: Poppins;
+}
+.service-container .card:hover h3, 
+.service-container .card:hover p {
+    color: var(--main-color);
+}
+.payment-methods {
+    margin: auto;
+    width: 100%;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.payment-methods img {
+    height: 70px;
+}
+.payment-methods p {
+    font-size: 10px;
+    font-family: Poppins;
+}
+.payment-methods p span {
+    color: var(--main-color);
+    font-weight: bold;
+}
+
+
+}
