--- a/index.css
+++ b/index.css
@@ -196,6 +196,9 @@ header{
     font-size: 17px;
     font-family: Poppins;
 }
+#close-menu {
+    display: none;
+}
 /* end of styling for header section */
 
 /*styling for image slider*/
@@ -1108,6 +1111,13 @@ header{
 .payment-methods p span {
     color: var(--main-color);
     font-weight: bold;
+}
+
+#close-menu {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    right: 20px;
 }
 
 
