--- a/shop.css
+++ b/shop.css
@@ -595,7 +595,6 @@ body {
         justify-content: space-between;
         padding: 39px 10px;
 }
-
 .logo-container{
     align-items: center;
     display: flex;
@@ -866,7 +865,7 @@ font-size: 27px;
     overflow-y: scroll;
     position: fixed;
     top: 0;
-    left: -400px;
+    left: -100%;
     width: 100%;
     z-index: 2;
     background-color: white;
@@ -875,10 +874,10 @@ font-size: 27px;
 #closeCart {
   visibility: visible;
   float: right;
-  padding-right: 10px;
+  padding-right: 20px;
   font-size: 20px;
 }
-#shopping-cart.visible {
+.visible {
     left: 0;
 }
 
@@ -942,13 +941,6 @@ font-size: 27px;
     font-size: 18px;
     cursor: pointer;
 }
-
-
-
-
-
-
-
 
 .footer {
     width: 100%;
@@ -1051,6 +1043,12 @@ font-size: 27px;
 .payment-methods p span {
     color: var(--main-color);
     font-weight: bold;
+}
+#close-menu {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    right: 20px;
 }
 
 
