--- a/shop.css
+++ b/shop.css
@@ -270,8 +270,6 @@ header{
         transform: translate(-50%, -50%);
         width: 90%;
         height: 75vh;
-        max-height: 75vh;
-        overflow-y: scroll;
         background-color: white;
         border-radius: 5px;
         padding: 20px;
@@ -595,6 +593,7 @@ body {
         justify-content: space-between;
         padding: 39px 10px;
 }
+
 .logo-container{
     align-items: center;
     display: flex;
@@ -1050,6 +1049,22 @@ font-size: 27px;
     top: 10px;
     right: 20px;
 }
-
+.cart-item {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+}
+.cart-item p {
+    font-family: Poppins;
+}
+.cart-item img {
+    width: 25%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
 
 }
